--- a/timing.html
+++ b/timing.html
@@ -279,6 +279,30 @@ function loadTiming() {
     });
 }
 </script>
+
+  <!-- Description below the timing tool -->
+<div class="timing-description" style="margin-top:20px; text-align:justify; font-family: Arial, sans-serif;">
+    <p>
+        Here you can view the <strong>train timing</strong> and <strong>stoppage information</strong> of all main line trains across Pakistan. Select your train and date above to see detailed schedule and station stops.
+    </p>
+</div>
+
+<!-- Station Images Grid 2x2 -->
+<div class="station-grid" style="display:grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap:10px; margin-top:20px;">
+    <div class="station-img">
+        <img src="YOUR_GOOGLE_DRIVE_LINK_KARACHI" alt="Karachi Station" style="width:100%; height:auto; border-radius:5px;">
+    </div>
+    <div class="station-img">
+        <img src="YOUR_GOOGLE_DRIVE_LINK_ROHRI" alt="Rohri Station" style="width:100%; height:auto; border-radius:5px;">
+    </div>
+    <div class="station-img">
+        <img src="YOUR_GOOGLE_DRIVE_LINK_LAHORE" alt="Lahore Station" style="width:100%; height:auto; border-radius:5px;">
+    </div>
+    <div class="station-img">
+        <img src="YOUR_GOOGLE_DRIVE_LINK_PESHAWAR" alt="Peshawar Station" style="width:100%; height:auto; border-radius:5px;">
+    </div>
+</div>
+
 <!-- FOOTER -->
 <footer>
    <div>
