--- a/pakrail.html
+++ b/pakrail.html
@@ -86,6 +86,26 @@
             font-size: 0.95rem;
         }
     }
+/* ================= NAVIGATION ================= */
+nav {
+  background-color: rgba(0, 0, 50, 0.9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
+  color: white;
+  padding: 12px 20px;
+  text-decoration: none;
+  font-size: 16px;
+  text-align: center;
+  transition: background 0.3s;
+}
+
+nav a:hover {
+  background-color: #1a237e;
+}
 
 </style>
 </head>
