--- a/pakrail.html
+++ b/pakrail.html
@@ -112,7 +112,15 @@ nav a:hover {
 <body>
 
 <div class="main-heading">Introduction to Pakistan Railways</div>
-
+<!-- MENU -->
+<nav>
+  <a href="index.html">Home</a>
+  <a href="stations.html">Stations</a>
+  <a href="timing.html">Train Timing</a>
+    <a href="availSeats.html" class="seat-avail">Seat Availability</a>
+  <a href="ticketing.html">Ticketing</a>
+   <a href="/prtracker" class="seat-avail">Train Tracking</a>
+</nav>
 <!-- English Section -->
 <section class="english-section">
     <h2>Pakistan Railways Overview</h2>
