--- a/ticketing.html
+++ b/ticketing.html
@@ -305,6 +305,38 @@ function closeTicketing() {
 }
 </script>
 <!-- FOOTER -->
+
+  <!-- Ticketing Page Description -->
+<div class="ticketing-description" style="margin-top:20px; text-align:justify; font-family: Arial, sans-serif;">
+
+    <!-- English Paragraph -->
+    <p>
+        The Pakistan Railway ticketing system is fully computerised and online. Users can obtain <strong>computerised open tickets</strong> and <strong>advanced reservations</strong> directly from railway stations. Advanced reservations can also be made using the <strong>RABTA mobile app</strong> or the <strong>Pakistan Railways official website</strong>. Moreover, at major stations, <strong>TVMs (Ticket Vending Machines)</strong> are available for convenient ticket reservation.
+    </p>
+
+    <!-- Urdu Paragraph -->
+    <p style="direction:rtl; font-family:'Jameel Noori Nastaleeq', 'Noto Nastaliq Urdu', serif;">
+        پاکستان ریلوے کا ٹکٹنگ سسٹم مکمل طور پر کمپیوٹرائزڈ اور آن لائن ہے۔ صارفین اسٹیشن سے <strong>کمپیوٹرائزڈ اوپن ٹکٹ</strong> اور <strong>ایڈوانس ریزرویشن</strong> حاصل کر سکتے ہیں۔ ایڈوانس ریزرویشن <strong>ربطہ موبائل ایپ</strong> یا <strong>پاکستان ریلوے کی سرکاری ویب سائٹ</strong> کے ذریعے بھی کی جا سکتی ہے۔ مزید برآں، بڑے اسٹیشنوں پر <strong>ٹی وی ایم (ٹکٹ وینڈنگ مشینز)</strong> دستیاب ہیں تاکہ ٹکٹ کی سہولت سے ریزرویشن کی جا سکے۔
+    </p>
+
+    <!-- Ticketing Images Grid -->
+    <div class="ticketing-images" style="display:flex; flex-wrap:wrap; gap:10px; margin-top:20px; justify-content:center;">
+        <!-- Mobile App Image -->
+        <div style="flex:1 1 200px; max-width:200px;">
+            <img src="YOUR_GOOGLE_DRIVE_LINK_MOBILE_APP" alt="Rabta Mobile App" style="width:100%; height:auto; border-radius:5px;">
+        </div>
+        <!-- TVM Image -->
+        <div style="flex:1 1 200px; max-width:200px;">
+            <img src="YOUR_GOOGLE_DRIVE_LINK_TVM" alt="Ticket Vending Machine" style="width:100%; height:auto; border-radius:5px;">
+        </div>
+        <!-- Reservation Office Image -->
+        <div style="flex:1 1 200px; max-width:200px;">
+            <img src="YOUR_GOOGLE_DRIVE_LINK_RESERVATION_OFFICE" alt="Reservation Office" style="width:100%; height:auto; border-radius:5px;">
+        </div>
+    </div>
+
+</div>
+
 <footer>
    <div>
     <a href="privacy-policy.html">Privacy Policy</a> |
