--- a/ticketing.html
+++ b/ticketing.html
@@ -330,7 +330,7 @@ footer a:hover {
     </div>
 
     <div>
-      <strong>FAQs</strong>
+     <a href="faqs.html"><strong>FAQs</strong></a>
     </div>
   </div>
 </div>
