--- a/stations.html
+++ b/stations.html
@@ -87,6 +87,21 @@ footer a {
 footer a:hover {
   text-decoration: underline;
 }
+  .stations-info p {
+        margin-bottom: 15px;
+    }
+
+    @media (max-width: 768px) {
+        .stations-info p {
+            font-size: 0.95rem;
+        }
+    }
+
+    @media (max-width: 480px) {
+        .stations-info p {
+            font-size: 0.9rem;
+        }
+    }
 </style>
 </head>
 
@@ -102,7 +117,20 @@ footer a:hover {
   <a href="ticketing.html">Ticketing</a>
   <a href="/prtracker" class="seat-avail">Train Tracking</a>
 </nav>
+<!-- Stations Page Info Section -->
+<div class="stations-info" style="margin-top:20px; font-family: Arial, sans-serif;">
 
+    <!-- English Paragraph -->
+    <p style="text-align:justify; font-size:1rem; line-height:1.6; margin-bottom:15px;">
+        On this page, you can explore all the major railway stations across Pakistan. Each station is listed with detailed information, including photos, available facilities, and maps to help you find your way. You can easily locate nearby stations for reservations and plan your journey efficiently. From Karachi to Peshawar, Lahore to Rohri, every station’s information is updated to provide accurate details for travelers. Discover amenities such as waiting rooms, ticket counters, food courts, restrooms, and parking areas. Interactive maps allow you to see directions to each station, helping you reach your destination without confusion. This page also helps new travelers familiarize themselves with station layouts and facilities before starting their journey. By exploring station images and facilities, you can plan your arrival and departure comfortably. Whether you are traveling for business or leisure, this section ensures you have all the information you need, including station accessibility, nearby transport links, and contact details. Stay informed and make your railway experience smoother and more convenient with these comprehensive station guides.
+    </p>
+
+    <!-- Urdu Paragraph -->
+    <p style="text-align:justify; direction:rtl; font-family:'Jameel Noori Nastaleeq', 'Noto Nastaliq Urdu', serif; font-size:1rem; line-height:1.6;">
+        اس صفحہ پر آپ پاکستان کے تمام اہم ریلوے اسٹیشنز کے بارے میں معلومات حاصل کر سکتے ہیں۔ ہر اسٹیشن کی تفصیلات، تصاویر، دستیاب سہولیات اور نقشے یہاں فراہم کیے گئے ہیں تاکہ آپ آسانی سے اپنا راستہ تلاش کر سکیں۔ آپ قریبی اسٹیشنز تلاش کر کے ریزرویشن کر سکتے ہیں اور اپنے سفر کی منصوبہ بندی مؤثر انداز میں کر سکتے ہیں۔ کراچی سے پشاور، لاہور سے روہڑی تک ہر اسٹیشن کی معلومات مسافروں کے لیے درست اور تازہ کاری شدہ ہیں۔ یہاں انتظار گاہیں، ٹکٹ کاؤنٹر، فوڈ کورٹ، بیت الخلاء اور پارکنگ جیسی سہولیات کی تفصیلات دی گئی ہیں۔ انٹرایکٹو نقشے ہر اسٹیشن تک پہنچنے کے لیے ہدایات فراہم کرتے ہیں تاکہ آپ بغیر کسی الجھن کے منزل تک پہنچ سکیں۔ یہ صفحہ نئے مسافروں کو اسٹیشن کی ترتیب اور سہولیات سے قبل از وقت واقف کرانے میں مدد دیتا ہے۔ اسٹیشن کی تصاویر اور سہولیات دیکھ کر آپ اپنی آمد اور روانگی کو آسانی سے منظم کر سکتے ہیں۔ چاہے آپ کاروبار کے لیے سفر کر رہے ہوں یا تفریح کے لیے، یہ سیکشن آپ کو تمام ضروری معلومات فراہم کرتا ہے، جس میں اسٹیشن تک رسائی، قریبی ٹرانسپورٹ روابط اور رابطہ کی تفصیلات شامل ہیں۔ اس جامع اسٹیشن گائیڈ کے ذریعے آپ کا ریلوے سفر زیادہ سہل اور خوشگوار بن سکتا ہے۔
+    </p>
+
+</div>
 <main style="padding:20px;">
 <h3>Stations Information</h3>
 <input
