--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@ nav a:hover {
 </header>
 <nav>
   <a href="pakrail.html">Pakistan Railways Intro</a>
+  <a href="pracademy.html">Pak Rail Academy</a>
   <a href="faqs.html">FAQs</a>
   <!--
   <a href="stations.html">Stations</a>
