--- a/pracademy.html
+++ b/pracademy.html
@@ -101,7 +101,7 @@
 <div class="main-heading">Pakistan Railways Academy</div>
 
 <!-- Google Ad placeholder -->
-<div class="ads-placeholder">[Ad Space: Top Banner]</div>
+<div class="ads-placeholder">-</div>
 
 <!-- Introduction -->
 <h2>Introduction</h2>
@@ -114,7 +114,7 @@ In 1954, the academy's facilities were selected by the United Nations Economic C
 </p>
 
 <!-- Google Ad placeholder -->
-<div class="ads-placeholder">[Ad Space: Inline]</div>
+<div class="ads-placeholder">-</div>
 
 <!-- Mission & Vision -->
 <h2>Mission</h2>
@@ -179,7 +179,8 @@ Plans include establishing a dedicated Research & Development wing, upgrading in
 </p>
 
 <!-- Urdu Version -->
-<div class="urdu">
+<div class="urdu" align="right">
+    
 <h2>تعارف</h2>
 <p>
 پاکستان ریلوے اکیڈمی کی بنیاد 1925 میں شمال مغربی ریلوے کے تحت ایک چھوٹے تربیتی اسکول کے طور پر لیالپور (موجودہ فیصل آباد) میں رکھی گئی تھی، جو بعد میں لاہور کے والٹن میں موجودہ کیمپس منتقل ہو گئی۔ یہ اکیڈمی کولونل سی۔ای۔ والٹن کے نام سے موسوم ہے۔ والٹن اکیڈمی جلد ہی لاہور کے علاقے والٹن کی شناخت بن گئی اور بین الاقوامی معیار کی ریلوے تربیت کے لیے مشہور ہو گئی۔
@@ -245,7 +246,7 @@ Plans include establishing a dedicated Research & Development wing, upgrading in
 </div>
 
 <!-- Google Ad placeholder -->
-<div class="ads-placeholder">[Ad Space: Bottom Banner]</div>
+<div class="ads-placeholder">-</div>
 
 </body>
 </html>
