--- a/pracademy.html
+++ b/pracademy.html
@@ -179,9 +179,9 @@ Plans include establishing a dedicated Research & Development wing, upgrading in
 </p>
 
 <!-- Urdu Version -->
-<div class="urdu" align="right">
+<div class="urdu">
     
-<h2>تعارف</h2>
+<h2 style="text-align:right;">تعارف</h2>
 <p>
 پاکستان ریلوے اکیڈمی کی بنیاد 1925 میں شمال مغربی ریلوے کے تحت ایک چھوٹے تربیتی اسکول کے طور پر لیالپور (موجودہ فیصل آباد) میں رکھی گئی تھی، جو بعد میں لاہور کے والٹن میں موجودہ کیمپس منتقل ہو گئی۔ یہ اکیڈمی کولونل سی۔ای۔ والٹن کے نام سے موسوم ہے۔ والٹن اکیڈمی جلد ہی لاہور کے علاقے والٹن کی شناخت بن گئی اور بین الاقوامی معیار کی ریلوے تربیت کے لیے مشہور ہو گئی۔
 </p>
@@ -190,7 +190,7 @@ Plans include establishing a dedicated Research & Development wing, upgrading in
 1954 میں اقوام متحدہ کی اقتصادی کمیشن برائے ایشیا اور دورِ مشرق نے اس اکیڈمی کو ریجنل ریلوے ٹریننگ سینٹر کے طور پر منتخب کیا تاکہ ایشیا کے افسران کو جدید تربیت دی جا سکے۔ تب سے اب تک ہزاروں افسران اور اسٹاف تربیت حاصل کر چکے ہیں۔ 2000 میں اس کا موجودہ نام پاکستان ریلوے اکیڈمی رکھا گیا۔
 </p>
 
-<h2>مشن اور وژن</h2>
+<h2 style="text-align:right;">مشن اور وژن</h2>
 <p>
 مشن: پاکستان ریلوے اکیڈمی کو ایک بہترین مرکز کے طور پر تبدیل کرنا تاکہ ریلوے افسران اور اسٹاف کو اعلیٰ معیار کی تربیت فراہم کی جا سکے۔
 </p>
@@ -199,12 +199,12 @@ Plans include establishing a dedicated Research & Development wing, upgrading in
 ویژن: پاکستان ریلوے کے انسانی وسائل کو عالمی معیار کے مطابق تیار کرنا، تاکہ ہر شعبے میں بہترین تربیت یافتہ عملہ دستیاب ہو۔
 </p>
 
-<h2>تنظیم</h2>
+<h2 style="text-align:right;">تنظیم</h2>
 <p>
 اکیڈمی کے سربراہ ڈائریکٹر جنرل ہیں، جو جوائنٹ ڈائریکٹرز کی معاونت سے مختلف شعبوں کی نگرانی کرتے ہیں جیسے سول، میکینیکل، سگنلنگ، الیکٹریکل/الیکٹرانکس اور ٹریفک۔ ہر جوائنٹ ڈائریکٹر کے ساتھ معاون ڈائریکٹرز اور تجربہ کار ریلوے اسٹاف کے انسٹرکٹرز موجود ہیں۔
 </p>
 
-<h2>مقاصد</h2>
+<h2 style="text-align:right;">مقاصد</h2>
 <div class="facility-box">
     <p>نئے افسران اور اسٹاف کے لیے تربیت فراہم کرنا، بشمول ٹریفک، کمرشل، سول، میکینیکل، الیکٹریکل، سگنلز، ٹیلی کام، اسٹورز اور پرچیز کے شعبوں میں اسپیشلائزڈ پروگرامز۔</p>
 </div>
@@ -218,27 +218,27 @@ Plans include establishing a dedicated Research & Development wing, upgrading in
     <p>ایشیاء اور دورِ مشرق کے سینئر ریلوے افسران کو اقوام متحدہ کے پروگرام PTAP کے تحت تربیت فراہم کرنا، وزارت اقتصادی امور کے تعاون سے۔</p>
 </div>
 
-<h2>سہولیات</h2>
+<h2 style="text-align:right;">سہولیات</h2>
 <p>
 اکیڈمی میں 35 جدید کلاس رومز، ماڈل رومز، کمپیوٹر لیبز اور لائبریری موجود ہے، جس میں تکنیکی، پیشہ ورانہ اور انتظامی کتابیں، جرائد اور رسائل دستیاب ہیں۔ سات ہاسٹلز میں 510 سے زائد طلبہ، بشمول بین الاقوامی طلبہ کے لیے رہائش اور مفت میس کی سہولت بھی فراہم کی جاتی ہے۔
 </p>
 
-<h2>صحت اور تفریح</h2>
+<h2 style="text-align:right;">صحت اور تفریح</h2>
 <p>
 مقام پر موجود میڈیکل آفیسر اور ڈسپنسری ہنگامی طبی سہولت فراہم کرتے ہیں۔ کھیلوں اور تفریح کے مواقع میں فٹبال، ہاکی، کرکٹ، بیڈمنٹن اور انڈور سرگرمیاں شامل ہیں۔
 </p>
 
-<h2>تربیت اور کورسز</h2>
+<h2 style="text-align:right;">تربیت اور کورسز</h2>
 <p>
 اکیڈمی سالانہ کئی پری سروس، پروموشن اور ریفریشر کورسز منعقد کرتی ہے، جس میں پاکستان اور دیگر ممالک کے ہزاروں شرکاء شامل ہوتے ہیں۔ تربیت میں کلاس روم کی تعلیم کے ساتھ عملی تجربہ شامل ہے، جس میں سمیولیٹر، CBI کنسول اور ریلوے نیٹ ورک کے دورے شامل ہیں۔
 </p>
 
-<h2>کوالٹی مینجمنٹ</h2>
+<h2 style="text-align:right;">کوالٹی مینجمنٹ</h2>
 <p>
 پاکستان ریلوے اکیڈمی ISO 9001:2008 سے مصدقہ ہے، جو تربیت کے معیار کو عالمی سطح پر یقینی بناتا ہے۔ سرٹیفیکیشن میں ریلوے آپریشن، مینجمنٹ کورسز اور مقامی صنعتی تربیت شامل ہیں۔
 </p>
 
-<h2>مستقبل کے منصوبے</h2>
+<h2 style="text-align:right;">مستقبل کے منصوبے</h2>
 <p>
 اکیڈمی میں ریسرچ اینڈ ڈیولپمنٹ ونگ کا قیام، انفراسٹرکچر کی بہتری، تعلیمی اداروں کے ساتھ کولیبریشن (Triple Helix Model)، اور نیشنل اسکول آف پبلک پالیسی کے ساتھ منسلک ہونا شامل ہیں تاکہ مینجمنٹ تربیت کو مزید بہتر بنایا جا سکے۔
 </p>
