--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ nav a:hover {
 <nav>
   <a href="pakrail.html">Pakistan Railways Intro</a>
   <a href="pracademy.html">Pak Rail Academy</a>
+    <a href="icf.html">P.R Carriage Factory</a>
   <a href="faqs.html">FAQs</a>
   <!--
   <a href="stations.html">Stations</a>
