--- a/icf.html
+++ b/icf.html
@@ -76,7 +76,7 @@
 <div class="main-heading">Islamabad Carriage Factory (ICF)</div>
 
 <!-- Top Google Ad Placeholder -->
-<div class="ads-placeholder">[Ad Space: Top Banner]</div>
+<div class="ads-placeholder">-</div>
 
 <!-- English Section -->
 <h2>Overview</h2>
@@ -90,7 +90,7 @@ ICF was founded in collaboration with the German company Linke Hofmann Busch (no
 </p>
 
 <!-- Google Ad placeholder -->
-<div class="ads-placeholder">[Ad Space: Inline]</div>
+<div class="ads-placeholder">-</div>
 
 <h2>Factory Size & Production</h2>
 <p>
@@ -158,7 +158,7 @@ ICF پاکستان کے ریلوے نیٹ ورک میں اہم کردار ادا
 </div>
 
 <!-- Bottom Google Ad Placeholder -->
-<div class="ads-placeholder">[Ad Space: Bottom Banner]</div>
+<div class="ads-placeholder">-</div>
 
 </body>
 </html>
