--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ nav a:hover {
     </a>
 
     <a href="https://fly.pakrail.online" class="menu-item">
-      <i class="fas fa-airplane"></i>
+      <i class="fas fa-plane-departur"></i>
       <span>Flights Schedule</span>
     </a>
 
