--- a/timing.html
+++ b/timing.html
@@ -299,7 +299,7 @@ function loadTiming() {
         <img src="YOUR_GOOGLE_DRIVE_LINK_LAHORE" alt="Lahore Station" style="width:100%; height:auto; border-radius:5px;">
     </div>
     <div class="station-img">
-        <img src="YOUR_GOOGLE_DRIVE_LINK_PESHAWAR" alt="Peshawar Station" style="width:100%; height:auto; border-radius:5px;">
+        <img src="https://drive.google.com/file/d/19YEeZgEb8vNAEOoiihivsnbhqWZWMOmk" alt="Peshawar Station" style="width:100%; height:auto; border-radius:5px;">
     </div>
 </div>
 
