--- a/timing.html
+++ b/timing.html
@@ -289,19 +289,33 @@ function loadTiming() {
 
 <!-- Station Images Grid 2x2 -->
 <div class="station-grid" style="display:grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap:10px; margin-top:20px;">
+
     <div class="station-img">
-        <img src="https://drive.google.com/file/d/19YEeZgEb8vNAEOoiihivsnbhqWZWMOmk" alt="Karachi Station" style="width:100%; height:auto; border-radius:5px;">
+        <img src="https://drive.google.com/uc?export=view&id=19YEeZgEb8vNAEOoiihivsnbhqWZWMOmk"
+             alt="Karachi Station"
+             style="width:100%; height:200px; object-fit:cover; border-radius:5px;">
     </div>
+
     <div class="station-img">
-        <img src="https://drive.google.com/file/d/1IhtqtfSVstYoV2J08Y9MoEHyQCqYEVqq" alt="Rohri Station" style="width:100%; height:auto; border-radius:5px;">
+        <img src="https://drive.google.com/uc?export=view&id=1IhtqtfSVstYoV2J08Y9MoEHyQCqYEVqq"
+             alt="Rohri Station"
+             style="width:100%; height:200px; object-fit:cover; border-radius:5px;">
     </div>
+
     <div class="station-img">
-        <img src="https://drive.google.com/file/d/1pT_I4sEcX_dfgImkUYN7AM7GlzlOX7Bu" alt="Lahore Station" style="width:100%; height:auto; border-radius:5px;">
+        <img src="https://drive.google.com/uc?export=view&id=1pT_I4sEcX_dfgImkUYN7AM7GlzlOX7Bu"
+             alt="Lahore Station"
+             style="width:100%; height:200px; object-fit:cover; border-radius:5px;">
     </div>
+
     <div class="station-img">
-        <img src="https://drive.google.com/file/d/1jBcISDm3_NiF92BdneaTKNKMliA6iizC" alt="Peshawar Station" style="width:100%; height:auto; border-radius:5px;">
+        <img src="https://drive.google.com/uc?export=view&id=1jBcISDm3_NiF92BdneaTKNKMliA6iizC"
+             alt="Peshawar Station"
+             style="width:100%; height:200px; object-fit:cover; border-radius:5px;">
     </div>
+
 </div>
+
 
 <!-- FOOTER -->
 <footer>
