--- a/timing.html
+++ b/timing.html
@@ -286,35 +286,30 @@ function loadTiming() {
         Here you can view the <strong>train timing</strong> and <strong>stoppage information</strong> of all main line trains across Pakistan. Select your train and date above to see detailed schedule and station stops.
     </p>
 </div>
+<div class="station-grid"
+     style="display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:10px; margin-top:20px;">
 
-<!-- Station Images Grid 2x2 -->
-<div class="station-grid" style="display:grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap:10px; margin-top:20px;">
+    <img src="https://drive.usercontent.google.com/download?id=19YEeZgEb8vNAEOoiihivsnbhqWZWMOmk&export=view"
+         alt="Karachi Station"
+         style="width:100%; height:200px; object-fit:cover; border-radius:5px;"
+         loading="lazy" referrerpolicy="no-referrer">
 
-    <div class="station-img">
-        <img src="https://drive.google.com/uc?export=view&id=19YEeZgEb8vNAEOoiihivsnbhqWZWMOmk"
-             alt="Karachi Station"
-             style="width:100%; height:200px; object-fit:cover; border-radius:5px;">
-    </div>
+    <img src="https://drive.usercontent.google.com/download?id=1IhtqtfSVstYoV2J08Y9MoEHyQCqYEVqq&export=view"
+         alt="Rohri Station"
+         style="width:100%; height:200px; object-fit:cover; border-radius:5px;"
+         loading="lazy" referrerpolicy="no-referrer">
 
-    <div class="station-img">
-        <img src="https://drive.google.com/uc?export=view&id=1IhtqtfSVstYoV2J08Y9MoEHyQCqYEVqq"
-             alt="Rohri Station"
-             style="width:100%; height:200px; object-fit:cover; border-radius:5px;">
-    </div>
+    <img src="https://drive.usercontent.google.com/download?id=1pT_I4sEcX_dfgImkUYN7AM7GlzlOX7Bu&export=view"
+         alt="Lahore Station"
+         style="width:100%; height:200px; object-fit:cover; border-radius:5px;"
+         loading="lazy" referrerpolicy="no-referrer">
 
-    <div class="station-img">
-        <img src="https://drive.google.com/uc?export=view&id=1pT_I4sEcX_dfgImkUYN7AM7GlzlOX7Bu"
-             alt="Lahore Station"
-             style="width:100%; height:200px; object-fit:cover; border-radius:5px;">
-    </div>
-
-    <div class="station-img">
-        <img src="https://drive.google.com/uc?export=view&id=1jBcISDm3_NiF92BdneaTKNKMliA6iizC"
-             alt="Peshawar Station"
-             style="width:100%; height:200px; object-fit:cover; border-radius:5px;">
-    </div>
-
+    <img src="https://drive.usercontent.google.com/download?id=1jBcISDm3_NiF92BdneaTKNKMliA6iizC&export=view"
+         alt="Peshawar Station"
+         style="width:100%; height:200px; object-fit:cover; border-radius:5px;"
+         loading="lazy" referrerpolicy="no-referrer">
 </div>
+
 
 
 <!-- FOOTER -->
