--- a/pakrail.html
+++ b/pakrail.html
@@ -106,7 +106,25 @@ nav a {
 nav a:hover {
   background-color: #1a237e;
 }
+  /* Footer */
+footer {
+  background:#2e7d32;
+  color:#ffffff;
+  padding:15px 10px;
+  text-align:center;
+  font-family:Arial, sans-serif;
+  margin-top:40px;
+}
 
+footer a {
+  color:#ffeb3b;
+  text-decoration:none;
+  margin:0 8px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 </style>
 </head>
 <body>
@@ -171,5 +189,19 @@ nav a:hover {
     </p>
 </section>
 
+<!-- FOOTER -->
+<footer>
+   <div>
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="disclaimer.html">Disclaimer</a> |
+    <a href="about-us.html">About Us</a> |
+    <a href="contact-us.html">Contact</a>
+  </div>
+  <div style="font-size:13px;color:#dcdcdc;">
+    Independent information portal.
+      © <span id="year"></span> pakrail.online
+  </div>
+
+</footer>
 </body>
 </html>
